testdata/baselines/reference/compiler/deeplyNestedArrayTypes.errors.txt
deeplyNestedArrayTypes.ts(34,5): error TS2322: Type 'B.Outer' is not assignable to type 'A.Outer'.
  Types of property 'inners' are incompatible.
    Type 'B.Inner[]' is not assignable to type 'A.Inner[]'.
      Type 'B.Inner' is not assignable to type 'A.Inner'.
        Types of property 'mids' are incompatible.
          Type 'B.Mid[]' is not assignable to type 'A.Mid[]'.
            Type 'B.Mid' is not assignable to type 'A.Mid'.
              Types of property 'leaves' are incompatible.
                Type 'B.Leaf[]' is not assignable to type 'A.Leaf[]'.
                  Type 'B.Leaf' is not assignable to type 'A.Leaf'.
                    Types of property 'id' are incompatible.
                      Type 'number' is not assignable to type 'string'.


==== deeplyNestedArrayTypes.ts (1 errors) ====
    // https://github.com/microsoft/typescript-go/issues/3426
    
    namespace A {
        export type Outer = {
            inners: Inner[];
        }
        export type Inner = {
            mids: Mid[];
        }
        export type Mid = {
            leaves: Leaf[];
        }
        export type Leaf = {
            id: string;
        }
    }
    
    namespace B {
        export type Outer = {
            inners: Inner[];
        }
        export type Inner = {
            mids: Mid[];
        }
        export type Mid = {
            leaves: Leaf[];
        }
        export type Leaf = {
            id: number;
        }
    }
    
    function test(a: A.Outer, b: B.Outer) {
        a = b
        ~
!!! error TS2322: Type 'B.Outer' is not assignable to type 'A.Outer'.
!!! error TS2322:   Types of property 'inners' are incompatible.
!!! error TS2322:     Type 'B.Inner[]' is not assignable to type 'A.Inner[]'.
!!! error TS2322:       Type 'B.Inner' is not assignable to type 'A.Inner'.
!!! error TS2322:         Types of property 'mids' are incompatible.
!!! error TS2322:           Type 'B.Mid[]' is not assignable to type 'A.Mid[]'.
!!! error TS2322:             Type 'B.Mid' is not assignable to type 'A.Mid'.
!!! error TS2322:               Types of property 'leaves' are incompatible.
!!! error TS2322:                 Type 'B.Leaf[]' is not assignable to type 'A.Leaf[]'.
!!! error TS2322:                   Type 'B.Leaf' is not assignable to type 'A.Leaf'.
!!! error TS2322:                     Types of property 'id' are incompatible.
!!! error TS2322:                       Type 'number' is not assignable to type 'string'.
    }
    